商家会员同步注册到商城系统中

--- a/Hotel/Tpl/Member/change.html
+++ b/Hotel/Tpl/Member/change.html
@@ -56,12 +56,12 @@
                 <input type="text" class="am-fl" name="address" value="{$user['address']}" placeholder="输入你的地址" style="width:65%"><span class="am-fl" style="color:#F00; margin:5px 5px">*</span>
               </div>
             </div>
-            <!-- <div class="am-form-group"  style="display:none">
-              <label for="user-weibo" class="am-u-sm-2 am-form-label">会员传真：</label>
+            <div class="am-form-group">
+              <label for="user-weibo" class="am-u-sm-2 am-form-label">推荐人：</label>
               <div class="am-u-sm-10">
-                <input type="text" class="am-fl" name="chuanzhen" value="{$user['chuanzhen']}" placeholder="输入你的传真" style="width:65%"><span class="am-fl" style="color:#F00; margin:5px 5px">*</span>
+                <input type="text" class="am-fl" name="tuijianren" value="{$user['tuijianren']}" placeholder="输入推荐人手机号" style="width:65%"><span class="am-fl" style="color:#F00; margin:5px 5px">*推荐人必须是已在商城注册过的会员*</span>
               </div>
-            </div> -->
+            </div>
             <div class="am-form-group">
             <label for="user-weibo" class="am-u-sm-2 am-form-label"></label>
               <div class="am-u-sm-10">
