--- a/Hotel/Tpl/Member/hotel.html
+++ b/Hotel/Tpl/Member/hotel.html
@@ -178,7 +178,7 @@
                     </td>
                     </tr>
                     </if>
-                    <if condition="$creditcards">
+<!--                     <if condition="$creditcards">
                     <tr>
                             <td>信用卡：</td>
                             <td style="line-height:1em;">
@@ -201,7 +201,14 @@
                     </div>
                     </td>
                     </tr>
-                    </if>
+                    </if> -->
+<!-- 					<tr>
+                        <td>推荐人手机号：</td>
+                        <td>
+                            <input type="text" name="tuijianren" value='{$tuijianren}' class="am-fl" style=" width:240px;">
+                            <span class="am-fl" style="color: red">*推荐人必须是已在商城注册的会员*</span>
+                        </td>
+                    </tr> -->
                     <script charset="utf-8" src="__PUBLIC__/kindeditor-4.1.5/kindeditor-min.js"></script>
                     <script charset="utf-8" src="__PUBLIC__/kindeditor-4.1.5/lang/zh_CN.js"></script>
                     <script>
